# Notion-AI-to-OpenAI-Compatible

./: .env.example  .gitignore  README.md  arena_account.json  config.example.json  models.example.json  pyproject.toml  requirements.txt
notionchat/: __init__.py  __main__.py  account.py  arena_client.py  bootstrap.py  browser_fp.py  client.py  config.py  model_catalog.py  models.py  models_sync.py  ndjson.py  notion_http.py  openai_api.py  recaptcha.py  setup_cli.py  tools.py  transcript.py
postman/: NotionChat.local.postman_environment.json  NotionChat.postman_collection.json
tests/: test_arena_client.py
